--- a/src/components/Poll.css
+++ b/src/components/Poll.css
@@ -1,3 +1,13 @@
-.badge {
+.badges {
+  display: flex;
   margin-right: 20px;
+}
+
+.badge {
+  margin-left: 2px;
+  margin-right: 2px;
+}
+
+.confirm-button {
+  width: 200px
 }
