--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,3 +11,10 @@
   font-size: larger;
   padding-top: 12px;
 }
+
+.user {
+  display: inline-flex;
+  align-items: center;
+  font-weight: bold;
+  font-size: large;
+}
