--- a/src/views/Vote.css
+++ b/src/views/Vote.css
@@ -12,6 +12,6 @@
 
 .card {
   display: flex;
-  max-width: max-content;
-  min-width: fit-content;
+  align-items: center;
+  width: fit-content;
 }
