--- a/VotingSystem-Frontend/src/views/Vote.css
+++ b/VotingSystem-Frontend/src/views/Vote.css
@@ -1,11 +1,11 @@
-.div__vote-selection {
+.vote-selection-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 32px;
 }
 
-.card-body__vote-selection {
+.vote-selection {
   width: 1200px;
   min-width: 10px;
 }
